Actions
Bug #11451
closedMRI crashes with 'Stack inconsistency error' when a method which yields is called recursively in a particular way
Bug #11451:
MRI crashes with 'Stack inconsistency error' when a method which yields is called recursively in a particular way
ruby -v:
2.3.0dev, also present in 2.2.2
Description
Dear Ruby people,
How are you? The other day, someone reported that a gem I maintain was crashing under MRI 2.2.2. I traced it through with GDB, found where it was going wrong, and wrote a tiny little patch which makes the crash go away. (Yay!) Can you look at this and check that this patch won't cause any other problems?
Thanks,
Alex Dowad
Files
Updated by alexdowad (Alex Dowad) about 11 years ago
Sorry, I forgot to say... THANKS to Xavier Shay for finding this problem!
Updated by usa (Usaku NAKAMURA) about 11 years ago
- Related to Bug #11071: Stack consistency error while using RSpec and Timecop added
Updated by nobu (Nobuyoshi Nakada) about 11 years ago
- Status changed from Open to Assigned
- Assignee set to ko1 (Koichi Sasada)
Updated by ko1 (Koichi Sasada) about 11 years ago
- Status changed from Assigned to Closed
Applied in changeset r51651.
- vm_insnhelper.c (vm_invoke_block): we should not expect ci->argc is
stable after invoking a block. [Bug #11451] - test/ruby/test_yield.rb: add a test. This test script is given by
Alex Dowad.
Updated by ko1 (Koichi Sasada) about 11 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: UNKNOWN to 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: REQUIRED
Thank you for your reproducible script!
Updated by nagachika (Tomoyuki Chikanaga) almost 11 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: REQUIRED to 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: DONE
Backported into ruby_2_2 branch at r52717.
Actions