* vm_insnhelper.c (vm_invoke_block): we should not expect ci->argc is   stable after invoking a block. [Bug #11451] * test/ruby/test_yield.rb: add a test. This test script is given by   Alex Dowad.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@51651 b2dd03c8-39d4-4d8f-98ff-823fe69b080e